--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carnaby-dom",
   "version": "0.0.0",
-  "description": "JavaScript DOM parsing ",
+  "description": "DOM trees transformations",
   "main": "gruntfile.js",
   "scripts": {
     "test": "grunt test"
@@ -18,6 +18,10 @@
     "grunt-contrib-connect": "~0.9.0",
     "grunt-mocha": "~0.4.11",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-requirejs": "~0.4.4",
+    "amdclean": "~2.4.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-uglify": "~0.6.0"
   }
 }
