--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:mcsaatchi/carnaby-transform.git"
+    "url": "https://bitbucket.org/mcsaatchi/carnaby-transform.git"
   },
   "author": "leon.coto@mcsaatchi.com",
   "license": "ISC",
@@ -24,5 +24,9 @@
     "amdclean": "~2.4.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-uglify": "~0.6.0"
+  },
+  "dependencies": {
+    "underscore": "~1.7.0",
+    "jquery": "~2.1.1"
   }
 }
