Changing repo field to poing to Github.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/mcsaatchi/carnaby-transform.git"
+    "url": "https://github.com/mcsdh/carnaby-transform.git"
   },
   "author": "leon.coto@mcsaatchi.com",
   "license": "MIT",
