--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "*.sublime-*"
+    "*.sublime-*",
+    "build",
+    "wrap"
   ],
   "devDependencies": {
     "chai": "~1.10.0",
