--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "grunt-contrib-uglify": "~0.6.0",
     "semver": "~4.1.0",
     "grunt-release": "~0.10.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "grunt-releaser2": "~0.1.1"
   },
   "dependencies": {
     "underscore": "~1.7.0",
