--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,6 @@
     "requirejs": "~2.1.15"
   },
   "dependencies": {
-    "underscore": "1.4.4 - 1.6.0",
-    "jquery": "^1.8.0 || ^2.0.0"
+    "underscore": "1.4.4 - 1.6.0"
   }
 }
