--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "grunt-releaser2": "~0.1.1"
   },
   "dependencies": {
-    "underscore": "~1.7.0",
-    "jquery": "~2.1.1"
+    "underscore": "~1.7.0"
   }
 }
