--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   "author": "leon.coto@mcsaatchi.com",
   "license": "MIT",
   "devDependencies": {
-    "matchdep": "~0.3.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-connect": "~0.9.0",
-    "grunt-mocha": "~0.4.11",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-requirejs": "~0.4.4",
     "amdclean": "~2.4.0",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-uglify": "~0.6.0",
-    "semver": "~4.1.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-mocha": "~0.4.11",
     "grunt-release": "~0.10.0",
+    "grunt-releaser2": "~0.1.1",
     "lodash": "~2.4.1",
-    "grunt-releaser2": "~0.1.1"
+    "matchdep": "~0.3.0",
+    "mocha": "^2.2.5",
+    "semver": "~4.1.0"
   },
   "dependencies": {
     "underscore": "~1.7.0"
