--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "~2.4.1",
     "matchdep": "~0.3.0",
     "mocha": "^2.2.5",
+    "requirejs": "^2.1.19",
     "semver": "~4.1.0"
   },
   "dependencies": {
