--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
     "wrap"
   ],
   "devDependencies": {
-    "chai": "~1.10.0",
-    "requirejs": "~2.1.15"
+    "chai": "~1.10.0"
   },
   "dependencies": {
     "underscore": "1.4.4 - 1.6.0"
