Managing chai dependency with NPM

--- a/test/specs/.jshintrc
+++ b/test/specs/.jshintrc
@@ -14,6 +14,7 @@
   "browser": true,
   "devel": true,
   "laxcomma": true,
+  "expr": true,
   "globals": {
     "define": false,
     "require": false,
